<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/back_01" />

    <LinearLayout
        android:id="@+id/ac_set_ll_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/set_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="11dp"
                android:layout_height="19dp"
                android:duplicateParentState="true"
                android:scaleType="fitXY"
                android:src="@drawable/left_back" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/setwifi_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ac_set_ll01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ac_set_ll_top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ac_set_iv_line01"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/main_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/menu_back"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:duplicateParentState="true"
                android:gravity="right|center"
                android:text="@string/wifiname"
                android:textColor="@drawable/textcolor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/set_wifiname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:inputType="text"
                android:textColor="#FFF"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/menu_back"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:gravity="right|center"
                android:text="@string/oldwifipswd"
                android:textColor="@drawable/textcolor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/set_wifi_oldpswd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/menu_back"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:gravity="right|center"
                android:text="@string/wifipswd1"
                android:textColor="@drawable/textcolor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/set_wifi_pswd1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/menu_back"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:gravity="right|center"
                android:text="@string/wifipswd2"
                android:textColor="@drawable/textcolor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/set_wifi_pswd2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_wifi_confirm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:background="@drawable/button_01"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@drawable/textcolor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/set_wifi_cancle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@drawable/button_01"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@drawable/textcolor"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/ac_set_ll01"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/set_show_pass"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/set_see_01"/>
    </LinearLayout>
</RelativeLayout>
